# kuma-ingress-watcher

./: .gitignore  .pre-commit-config.yaml  .releaserc.yml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  pr.yml
kuma_ingress_watcher/: controller.py  ingress_controller.py
tests/: test_crd_exists.py  test_create_or_update_monitor.py  test_delete_monitor.py  test_extract_hosts.py  test_extract_hosts_from_ingress_rule.py  test_extract_hosts_from_match.py  test_get_ingress.py  test_get_ingressroutes.py  test_get_routes_or_rules.py  test_handle_changes.py  test_init_kuma_api.py  test_process_file_monitor.py  test_process_ingressroutes.py  test_process_multiple_routes.py  test_process_routes.py  test_process_routing_object.py  test_process_single_route.py
