[tool.poetry]
name = "kuma-ingress-watcher"
version = "1.1.0"
description = "Automatically manages IngressRoutes in Kubernetes and configures them in Uptime Kuma for availability monitoring."
authors = ["Quentin Sallio <q.sallio@gmail.com>",]

[tool.poetry.dependencies]
python = "^3.12"
kubernetes = "^30.0.0"
uptime-kuma-api = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]    
pytest = "^8.2.0"  

[tool.pytest.ini_options]
pythonpath = "."