[tool.poetry]
name = "kuma-ingress-watcher"
version = "1.1.0"
description = "Automatically manages IngressRoutes in Kubernetes and configures them in Uptime Kuma for availability monitoring."
authors = ["Quentin Sallio <q.sallio@gmail.com>",]

[tool.poetry.dependencies]
python = "^3.12"
kubernetes = "^30.0.0"
uptime-kuma-api = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
Flake8-pyproject = "^1.2.3"
pytest = "^8.2.0"  

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = [
    "ignore:SyntaxWarning"
]

[tool.flake8]
max-line-length = 150

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
