[tool.poetry]
name = "kuma-ingress-watcher"
version = "1.7.1"
description = "Automatically manages IngressRoutes in Kubernetes and configures them in Uptime Kuma for availability monitoring."
authors = ["Quentin Sallio <q.sallio@gmail.com>",]

[tool.poetry.dependencies]
python = "^3.12"
kubernetes = "^33.0.0"
uptime-kuma-api = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
Flake8-pyproject = "^1.2.3"
pytest = "^8.3.3"
coverage = "^7.6.3"
pytest-cov = "^6.0.0"
black = "^25.0.0"

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = [
    "ignore:SyntaxWarning"
]
addopts = "--cov=kuma_ingress_watcher --cov-report term-missing --verbose"

[tool.flake8]
max-line-length = 150

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
